@@ -33,7 +33,7 @@
   07b4037fb26f3015890c27e07f6e292bba1c2dbb 2010090600 mingw32-cygutils.xml
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  bd82145739caba7007e5fda2cb9f61fca97d2b15 2011050500 mingw32-gcc4.xml
+  ee2808e06098b8f3316eab85aece0b63f442ff3a 2011091400 mingw32-gcc4.xml
   88ed082418ab8bca93cf99396aee9ecaaed1c0df 2011080400 mingw32-gdb.xml
   432e7e89cfc138836b6b39930d81c5d054882ea4 2010090600 mingw32-gendef.xml
   7244fccd3713760a3afda6b9e4908a9610a645b3 2010090600 mingw32-gettext.xml
@@ -50,7 +50,7 @@
   f00d8a451ba74658073db3cfae44a0d3dbaf3ed9 2010090600 mingw32-pdcurses.xml
   e0b11cf1f8b8bc2229c34905e4ce5fedfeb52778 2010090600 mingw32-pexports.xml
   85218a27818c20463c1bb520f8a3044969406fbc 2010090600 mingw32-popt.xml
-  31b0150f6403ae4a1039c1f3cc9633be29e929c5 2011071201 mingw32-pthreads-w32.xml
+  9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
   488d6d4e037b19acdffc6a54c753fa69c21e80f9 2011082300 mingw32-runtime.xml
   713bf38bf91f67c0e1bdb9cc379285c10c3d7afb 2010090600 mingw32-xz.xml
   09f15afc1c832abdf7ecf7d983d8633a90c89697 2011042400 mingw32-zlib.xml
