@@ -1,3 +1,11 @@
+2011-09-14  Cesar Strauss  <cestrauss@gmail.com>
+
+	Update & publish mingw32-pthreads-w32 and mingw32-gcc4.
+
+	* mingw32/mingw32-gcc4.xml: Update to 4.6.1-1.
+	* mingw32/mingw32-pthreads-w32.xml (mingw32-libpthreadgc): Fix typo. 
+	* mingw32/issue.log: Updated accordingly.
+
 2011-08-26  Charles Wilson  <mingw@cwilson.fastmail.fm>
 
 	Add msys-rsync, msys-diffstat, msys-help2man.
